the loading indicator no longer stretches the nav-bar

--- a/src/kibana/styles/main.less
+++ b/src/kibana/styles/main.less
@@ -93,15 +93,15 @@ notifications {
    padding-bottom: 2px;
 }
 
-.loading-spinner {
-  color: @navbar-inverse-brand-hover-color;
-  font-size: @font-size-large;
-  vertical-align: middle;
-}
-
-// Date/time picker
-.navbar-timepicker-display {
+// right section of the main nav base
+.navbar-static-top .navbar-right {
   font-size: @font-size-small;
+
+  .loading-spinner {
+    color: @navbar-inverse-brand-hover-color;
+    vertical-align: middle;
+  }
+
   .fa {
     font-size: @font-size-large;
     vertical-align: text-top;
